# tk_tools

./: .directory  .gitignore  .travis.yml  MANIFEST.in  grid.py  image_archiving.py  license.txt  pyproject.toml  readme.md  requirements.txt  setup.py  test.py  tools.py
.github/workflows/: publish.yml  publishTest.yml  unittest.yml
docs/: Makefile  canvas_widgets.rst  conf.py  index.rst  installation.rst  make.bat  mkdocs.yml  readme.md  smart_widgets.rst  tooltips.rst  widget_groups.rst
docs/docs/: readme.md  widgets.md
docs/source/: conf.py  index.rst  smart_widgets.rst
docs_archive/: mkdocs.yml
docs_archive/docs/: widgets.md
examples/: binary_label.py  button.py  button_grid.py  button_grid_rowlabels.py  byte_label.py  dropdown.py  entry_grid.py  gauge.py  gauge2.py  graph.py  key_value.py  key_value_test.py  label_grid.py  leds.py  multislotframe.py  rotary_scale.py  seven_segment.py  smart_checkbutton.py  smart_listbox.py  smart_optionmenu.py  smart_spinbox.py  spreadsheet_handle.py  tooltip.py  user_calendar.py
examples/ref/: test_data.xlsx
tests/: test_BinaryLabel.py  test_ButtonGrid.py  test_EntryGrid.py  test_KeyValueEntry.py  test_LabelGrid.py  test_MultiSlotFrame.py  test_SevenSegment.py  test_SmartCheckbutton.py  test_SmartOptionMenu.py  test_basic.py
tk_tools/: __init__.py  canvas.py  grid.py  groups.py  images.py  tkcalendar.py  tooltips.py  version.py  visual.py  widgets.py
