[project]
name = "tk-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "engineering-notation>=0.10.0",
    "stringify>=0.1.1",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=8.3.4",
    "sphinx>=8.1.3",
]
