[project]
name = "tk-tools"
version = "0.17.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

classifiers=[
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Natural Language :: English'
]

dependencies = [
    "engineering-notation>=0.10.0",
    "stringify>=0.1.1",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pyvirtualdisplay>=3.0",
    "ruff>=0.9.2",
    "sphinx>=8.1.3",
]

[build-system]
requires = ["setuptools > 75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["tk_tools", ]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
